fix: overflow scroll

--- a/src/styles/blocks/_main.scss
+++ b/src/styles/blocks/_main.scss
@@ -13,6 +13,7 @@ body , html {
     font-family: var(--font-family-main), serif;
     font-weight: 400;
     font-style: normal;
+    overflow-x: hidden;
 }
 
 .container {
@@ -65,3 +66,18 @@ body , html {
     border-radius: 15px;
 
 }
+
+//* {
+//    position: relative;
+//}
+//
+//*::after {
+//    content: ' ';
+//    position: absolute;
+//    top: 0;
+//    left: 0;
+//    width: 100%;
+//    height: 100%;
+//    border: 1px solid red;
+//    pointer-events: none;
+//}
